Closed Bug 1225005 Opened 10 years ago Closed 9 years ago

"Assertion failure: containingBlockWidth >= 0" with huge padding, columns, abs pos

Categories

(Core :: Layout, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox45 --- affected
firefox47 --- fixed

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(4 files)

Attached file testcase
Assertion failure: containingBlockWidth >= 0, at layout/generic/nsFrame.cpp:4620
Attached file stack
david is this something for you, or do you know who could take a look at this ?
Flags: needinfo?(dbaron)
Perhaps Mats (who added the assertion) can look. (Though I was going to suggest Mats even before checking that he added it...)
Blocks: 1223232
Flags: needinfo?(dbaron) → needinfo?(mats)
Attached patch fix+testSplinter Review
Assignee: nobody → mats
Flags: needinfo?(mats)
Attachment #8725350 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
The crashtest here appears to be permafailing on Aurora since the uplift today. https://treeherder.mozilla.org/logviewer.html#?job_id=2096724&repo=mozilla-aurora The two we're hitting are: ###!!! ASSERTION: Can't solve for both start and end: 'NS_AUTOOFFSET != offsets.IEnd(outerWM)', file /builds/slave/m-aurora-and-api-15-d-00000000/build/src/layout/generic/nsAbsoluteContainingBlock.cpp, line 448 ###!!! ASSERTION: unexpected max block size: 'aBSize >= 0', file /builds/slave/m-aurora-and-api-15-d-00000000/build/src/layout/generic/nsFloatManager.cpp, line 128 Mats, is this safe to annotate away or did you want to take a look?
Flags: needinfo?(mats)
The code after those assertions looks safe regardless of values, so please annotate. Thanks.
Flags: needinfo?(mats)
I've updated the expectations on aurora with https://hg.mozilla.org/releases/mozilla-aurora/rev/9a446438d3a4 I imagine we'll want to land something similar to trunk so we don't hit this every merge going forward, but it's still asserting four times on trunk. Would we want to change it to (Android,2-4) (!Android,4) to cover everything?
Flags: needinfo?(mats)
Sure. Or just 2-4 for all platforms.
Flags: needinfo?(mats)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: