Bug 1225005 - Clamp negative values in containing block size.  r=roc